Fixed spacing issue with minors

--- a/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/pdf.scss
+++ b/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/pdf.scss
@@ -104,7 +104,7 @@ strong {
   float: none;
   width: 100%;
   height: 0;
-  margin: 10px 0;
+  margin: 0;
   border: 1px solid transparent;
 }
 
@@ -350,7 +350,6 @@ strong {
   .field--name-field-area-of-study-online,
   .field--name-field-area-of-study-preprof {
     line-height: .5;
-    display: inline;
     .field__item {
       display: inline;
       font-size: .7rem;
